Greasepencil curve editing has an issue with snapping (offset) #86881

Closed
opened 2021-03-24 10:17:02 +01:00 by Philipp Oeser · 6 comments
Member

System Information
Operating system: Linux-5.11.7-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-21 18:49, hash: 54bbaa26de
Worked: (newest version of Blender that worked as expected)

Short description of error
Greasepencil curve editing has an issue with snapping (offset)

Exact steps for others to reproduce the error
gpencil_curve_editing_snapping_issue.blend

  • Open file (you'll find a mesh plane and a gpencil stroke in curve editing mode with snapping enabled)
  • Move the selected curve point
  • Observe an offset while snapping
  • Snapping stroke points otoh snap without issues

gpencil_curveedit_snapping_issue.webm

**System Information** Operating system: Linux-5.11.7-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.67 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-21 18:49, hash: `54bbaa26de` Worked: (newest version of Blender that worked as expected) **Short description of error** Greasepencil curve editing has an issue with snapping (offset) **Exact steps for others to reproduce the error** [gpencil_curve_editing_snapping_issue.blend](https://archive.blender.org/developer/F9906784/gpencil_curve_editing_snapping_issue.blend) - Open file (you'll find a mesh plane and a gpencil stroke in curve editing mode with snapping enabled) - Move the selected curve point - Observe an offset while snapping - Snapping stroke points otoh snap without issues [gpencil_curveedit_snapping_issue.webm](https://archive.blender.org/developer/F9906785/gpencil_curveedit_snapping_issue.webm)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Author
Member
CC @filedescriptor
Falk David self-assigned this 2021-03-24 10:20:17 +01:00

This issue was referenced by e0fa295bc6

This issue was referenced by e0fa295bc6f2f99f5679a4d423818d83c67628a2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86881
No description provided.