Fix T86881: Curve Edit handle offset when snapping

When an aligned (or auto) handle was snapped with only the control
point selected, it would not snap to the correct point, but offset. This
was because the handles were not considered selected. The `TD_SELECTED`
flag was not being set.

The fix makes sure that we include the handles in the selection when
the handle is aligned or auto.

Maniphest Tasks: T86881

Differential Revision: https://developer.blender.org/D11111